[package]
name = "bing_client"
description = "Async reverse client for Bing copilot"
version = "0.1.0"
edition = "2021"
authors = ["canxin121 <q1969730106@gmail.com>"]
homepage = "https://github.com/canxin121/bing_client"
repository = "https://github.com/canxin121/bing_client"
license = "Apache-2.0 OR MIT"
readme = "Readme.md"
keywords = ["bing", "copilot", "gpt"]
categories = [
    "api-bindings",
    "asynchronous",
    "science::robotics",
    "web-programming",
]

[features]
default = ["rustls"]
rustls = [
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-webpki-roots",
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
native-tls = ["reqwest/default-tls", "tokio-tungstenite/native-tls"]

[dependencies]
reqwest = { version = "0.11.24", features = [
    "json",
    "multipart",
], default-features = false }
anyhow = "1.0.80"
base64 = "0.22.0"
chrono = "0.4.35"
futures-util = "0.3.30"
genawaiter = "0.99.1"
hex = "0.4.3"
http = "1.1.0"
image = "0.24.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0" }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4"] }
